# ai-chat-bot

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  ARCHITECTURE.md  BROWSER_INCREDIBILITY_EXPLANATION.md  CLAUDE.md  CORS_FIX_GUIDE.md  DEPLOYMENT_FIX_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_GUIDE_HINDI.md  DEPLOYMENT_SUCCESS_GUIDE.md  DEPLOY_FRONTEND_TO_VERCEL.md  Dockerfile  FIX_FOR_HF_BACKEND.md  FRONTEND_VERCEL_DEPLOYMENT_SUMMARY.md  HF_BACKEND_DEPLOYMENT.md  HF_DEPLOYMENT_GUIDE.md  HUGGING_FACE_DEPLOYMENT.md  PUSH_INSTRUCTIONS.md  README.md  README_HF.md  SPECIFICATIONS.md  VERCEL_404_FIX_GUIDE.md  VERCEL_BEGINNER_GUIDE.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_DEBUG.md  VERCEL_DEPLOYMENT_INSTRUCTIONS.md  VERCEL_TROUBLESHOOTING_GUIDE.md  Vercel_Deployment_Guide.md  alembic.ini  app.py  app_hf.py  backend.env  deploy-frontend-to-vercel.sh  deploy_helper.sh  deploy_hf.ps1  deploy_to_hf.md  deployment_status.md  (+23 more)
.claude/: settings.local.json  settings.local.json.save
api/: app.py  fullstack_app.py  index.py  main.py  requirements.txt  server.py  vercel_app.py
app/: __init__.py  main.py  (+1 more)
backend/: .env  .env.example  .gitignore  =3.3.0  DEPLOYMENT.md  Dockerfile  README.md  SPACE_README.md  alembic.ini  api.py  app.py  config.py  db.py  health.py  migrations.py  probe_8000.py  pyproject.toml  reprobe.py  requirements.txt  space.yaml  start.sh  todos.db  utils.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial.py  002_add_missing_columns.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  todo.py
backend/app/routers/: auth.py  todos.py
backend/app/schemas/: __init__.py  todo.py  user.py
backend/app/services/: __init__.py  auth.py  todo.py
backend/app/utils/: security.py
backend/models/: __init__.py  chatbot.py
backend/src/: main.py
backend/src/api/routes/: todos.py
backend/src/core/: config.py
backend/src/schemas/: error.py
backend/tests/: conftest.py  run_tests.sh  test_chat_endpoint.py  test_mcp_tools.py
backend/tests/integration/: test_todo_api.py
(+157 files in other folders)
