[project]
name = "todo-app-chatbot-phase-iii"
version = "0.1.0"
description = "Stateless todo management chatbot using OpenAI Agents SDK and MCP"

[dependencies]
fastapi = "^0.104.1"
openai = "^1.0.0"
sqlmodel = "^0.0.8"
pydantic = "^2.4.2"
better-auth = "^0.0.1"
neon-postgresql = "^1.0.0"
mcp-sdk-python = "^1.0.0"
openai-agents-sdk = "^1.0.0"

[project.scripts]
app = "app:app"
validate-config = "backend.config:validate_environment"

[agents]
main_orchestrator = "agents/orchestrator.py"
sub_agents = [
    "agents/task_management.py",
    "agents/nlu.py",
    "agents/context_awareness.py",
    "agents/validation.py",
    "agents/error_handling.py"
]

[tools]
mcp_tools = [
    "tools/add_task.py",
    "tools/list_tasks.py",
    "tools/complete_task.py",
    "tools/update_task.py",
    "tools/delete_task.py"
]

[database]
engine = "postgresql"
provider = "neon"
migration_system = "alembic"

[auth]
provider = "better-auth"
token_type = "jwt"